HRLD-65 fix: sonar warnings